--- a/activities.html
+++ b/activities.html
@@ -29,7 +29,7 @@
 
     <footer>
       <p>&copy; 2021 Katherine Jo |
-        <a href="https://github.com/prof-rossetti/student-site">source code</a>
+        <a href="https://github.com/ksj21/student-site">source code</a>
       </p>
     </footer>
   </body>
