--- a/contact.html
+++ b/contact.html
@@ -24,14 +24,14 @@
         <li>Twitter link</li>
         <li>LinkedIn link</li>
         <li>
-          <a href="mailto:sammystudent@myschool.edu"> Send me an email</a>
+          <a href="mailto:ksj21@georgetown.edu"> Send me an email</a>
         </li>
       </ul>
     </div>
 
     <footer>
       <p>&copy; 2021 Katherine Jo |
-        <a href="https://github.com/prof-rossetti/student-site">source code</a>
+        <a href="https://github.com/ksj21/student-site">source code</a>
       </p>
     </footer>
   </body>
