--- a/contact.html
+++ b/contact.html
@@ -21,10 +21,14 @@
     <div class="page">
       <h1>Contact</h1>
       <ul>
-        <li>Twitter link</li>
-        <li>LinkedIn link</li>
         <li>
-          <a href="mailto:ksj21@georgetown.edu"> Send me an email</a>
+          <a href="https://www.instagram.com/kjluca"> Instagram</a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/ksjo"> LinkedIn</a>
+        </li>
+        <li>
+          <a href="mailto:ksj21@georgetown.edu"> Email</a>
         </li>
       </ul>
     </div>
