--- a/activities.html
+++ b/activities.html
@@ -19,11 +19,11 @@
     </header>
 
     <div class="page">
-      <h1>Hobbies and Activities</h1>
+      <h1>Hobbies & Interests</h1>
       <ul>
-        <li>Rowing</li>
-        <li>Singing</li>
-        <li>Being in a Fraternity</li>
+        <li>Traveling</li>
+        <li>Reading</li>
+        <li>Hanging out with my dog and other dogs</li>
       </ul>
     </div>
 
