Fixed LinkedIn link

--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
           <a href="https://www.instagram.com/kjluca"> Instagram</a>
         </li>
         <li>
-          <a href="https://www.linkedin.com/ksjo"> LinkedIn</a>
+          <a href="https://www.linkedin.com/in/ksjo"> LinkedIn</a>
         </li>
         <li>
           <a href="mailto:ksj21@georgetown.edu"> Email</a>
