--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
       <p>
         I'm Korean, from Hong Kong. I'm passionate about computer science. I hope to create my own application software to change the world.
       </p>
-      <img src="images/education_icons_IF-02-512.png" alt="an icon of a student with a mortarboard" />
+      <img src="images/hk_skyline.jpg" alt="Hong Kong skyline" />
     </div>
 
     <footer>
