--- a/experience.html
+++ b/experience.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Katherine Jo | Work hard, play hard</title>
+    <title>Katherine J. | Work hard, play hard</title>
     <link rel="stylesheet" href="stylesheets/sammy-style.css">
   </head>
   <body>
     <header>
-      <p><a href="index.html">Katherine Jo</a></p>
+      <p><a href="index.html">Katherine J.</a></p>
       <nav>
         <ul>
           <li><a href="about.html">About</a></li>
@@ -29,7 +29,7 @@
     </div>
 
     <footer>
-      <p>&copy; 2021 Katherine Jo |
+      <p>&copy; 2021 Katherine J. |
         <a href="https://github.com/ksj21/student-site">source code</a>
       </p>
     </footer>
