--- a/activities.html
+++ b/activities.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html>
+  
   <head>
     <meta charset="utf-8">
     <title>Katherine J. | Work hard, play hard</title>
     <link rel="stylesheet" href="stylesheets/sammy-style.css">
+  
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1QX9H47DMP"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-1QX9H47DMP');
+    </script>
   </head>
+
+
   <body>
     <header>
       <p><a href="index.html">Katherine J.</a></p>
