--- a/contact.html
+++ b/contact.html
@@ -22,13 +22,13 @@
       <h1>Contact</h1>
       <ul>
         <li>
-          <a href="https://www.instagram.com/kjluca"> Instagram</a>
+          <a href="https://www.instagram.com/kjluca" target="_blank">Instagram</a>
         </li>
         <li>
-          <a href="https://www.linkedin.com/in/ksjo"> LinkedIn</a>
+          <a href="https://www.linkedin.com/in/ksjo" target="_blank">LinkedIn</a>
         </li>
         <li>
-          <a href="mailto:ksj21@georgetown.edu"> Email</a>
+          <a href="mailto:ksj21@georgetown.edu" target="_blank">Email</a>
         </li>
       </ul>
     </div>
